chore: 시스템 변수를 출력하는 gradle 테스크 추가

--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,10 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+task printEnv {
+    doLast {
+        println "SECRET_KEY: " + System.getenv("SECRET_KEY")
+        println "STATIC_KEY: " + System.getenv("STATIC_KEY")
+    }
+}
